# slackbot

./: .env.example  .gitignore  Makefile  README.md  progress.txt  pyproject.toml  script.txt  system_prompt.txt
flows/: ingest_prefect_docs.py  remote_heavy_work.py
src/slacky/: __init__.py  agent.py  api.py  handlers.py  listener.py  logging.py  settings.py  tools.py  utils.py  wrap.py
